--- a/Notebooks/GeoPlot.ipynb
+++ b/Notebooks/GeoPlot.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "controlled-supervision",
+   "id": "lovely-buffalo",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%capture\n",
+    "# %%capture\n",
     "import sys\n",
     "import os\n",
     "if not os.path.exists('./city_temperature.csv'):\n",
@@ -20,13 +20,14 @@
     "#   Load dataset from kaggle\n",
     "    !kaggle datasets download -d sudalairajkumar/daily-temperature-of-major-cities\n",
     "    !unzip daily-temperature-of-major-cities.zip --force\n",
-    "    !rm -rf daily-temperature-of-major-cities.zip"
+    "    if os.path.exists('./city_temperature.csv'):\n",
+    "        !rm -rf daily-temperature-of-major-cities.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "critical-reach",
+   "execution_count": 2,
+   "id": "magnetic-insert",
    "metadata": {},
    "outputs": [
     {
@@ -74,17 +75,18 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "hired-clinic",
+   "id": "preceding-definition",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./city_temperature.csv',low_memory=False)"
+    "if os.path.exists('./city_temperature.csv'):\n",
+    "    df = pd.read_csv('./city_temperature.csv',low_memory=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "chubby-consideration",
+   "id": "light-petroleum",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "patent-scheme",
+   "id": "expired-brick",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +211,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "threatened-twenty",
+   "id": "square-tourism",
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "specialized-fever",
+   "id": "former-beaver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "christian-threat",
+   "id": "arctic-quebec",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "italian-glenn",
+   "id": "attended-asian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "future-start",
+   "id": "weekly-ability",
    "metadata": {},
    "outputs": [
     {
@@ -618,14 +620,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "stylish-strengthening",
+   "execution_count": 11,
+   "id": "steady-volume",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea9f9ee258af49c8baee272c827d5911",
+       "model_id": "f9afcba4dea54615a057aed1958e21e7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -638,7 +640,6 @@
     }
    ],
    "source": [
-    "# gf[gf.Date==dt.datetime(1995,1,1)].plot(column='AvgTemperature',figsize=(20,20))\n",
     "gf_95_1_1 = gf[gf.Date==dt.datetime(1995,1,1)]\n",
     "\n",
     "@interact(d=widgets.SelectionSlider(\n",
@@ -658,21 +659,13 @@
     "        colorscale='matter', \n",
     "        colorbar={'title':'Avg. Temperature'})\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
-    "    iplot(fig)\n",
-    "# fig = px.choropleth(gf_95_1_1,\n",
-    "#                    geojson=gf_95_1_1.geometry,\n",
-    "#                    location_mode='country names',\n",
-    "#                    locations=gf_95_1_1.index,\n",
-    "#                    color=\"AvgTemperature\",\n",
-    "#                    projection=\"mercator\")\n",
-    "# fig.update_geos(fitbounds=\"locations\", visible=False)\n",
-    "# fig.show()"
+    "    iplot(fig)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "concrete-southeast",
+   "id": "further-canadian",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -694,7 +687,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
