added country plot w/ slider

--- a/Notebooks/GeoPlot.ipynb
+++ b/Notebooks/GeoPlot.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "lovely-buffalo",
+   "id": "nonprofit-posting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "magnetic-insert",
+   "id": "greenhouse-universal",
    "metadata": {},
    "outputs": [
     {
@@ -59,6 +59,7 @@
     "import geopandas as gp\n",
     "import kaggle\n",
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import datetime as dt\n",
     "import plotly.express as px\n",
     "import plotly.graph_objs as go\n",
@@ -75,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "preceding-definition",
+   "id": "novel-export",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "light-petroleum",
+   "id": "eastern-institute",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "expired-brick",
+   "id": "reflected-soviet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "square-tourism",
+   "id": "refined-obligation",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "former-beaver",
+   "id": "positive-backup",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "arctic-quebec",
+   "id": "persistent-forestry",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "attended-asian",
+   "id": "wired-threat",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "weekly-ability",
+   "id": "mental-robinson",
    "metadata": {},
    "outputs": [
     {
@@ -621,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "steady-volume",
+   "id": "registered-settlement",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9afcba4dea54615a057aed1958e21e7",
+       "model_id": "31078244ac274639a80a07619fbb7f1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -651,24 +652,67 @@
     "    readout=True\n",
     "))\n",
     "def geo_plot(d):\n",
-    "    layout = dict(title=f'Global AvgTemperatures {pd.to_datetime(str(d)).strftime(\"%Y-%m-%d\")}', geo=dict(showframe=False, projection={'type': 'orthographic'}))\n",
+    "    layout = dict(title=f'Global AvgTemperatures {pd.to_datetime(str(d)).strftime(\"%Y-%m-%d\")}', geo=dict(showframe=False, projection={'type': 'natural earth'}))\n",
     "    data = go.Choropleth(\n",
     "        locations=gf[gf['Date']==d].index, \n",
     "        locationmode='country names', \n",
-    "        z=gf[gf['Date']==d]['AvgTemperature'], \n",
+    "        z=gf[(gf['Date']==d)&(gf['AvgTemperature']!=-99)]['AvgTemperature'], \n",
     "        colorscale='matter', \n",
-    "        colorbar={'title':'Avg. Temperature'})\n",
+    "        colorbar={'title':'Avg. Temperature'},\n",
+    "        reversescale=True)\n",
     "    fig = go.Figure(data=data, layout=layout)\n",
     "    iplot(fig)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "further-canadian",
+   "execution_count": 23,
+   "id": "engaged-julian",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e53003777a8e41c7a43dffc9df524b7d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(Dropdown(description='Country', options=('Algeria', 'Burundi', 'Benin', 'Central African…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact(name=widgets.Dropdown(\n",
+    "    options=df['Country'].unique(),\n",
+    "    description='Country',\n",
+    "    disabled=False,\n",
+    "    continuous_update=False,\n",
+    "    orientation='horizontal',\n",
+    "    readout=True\n",
+    "))\n",
+    "def plot_country(name):\n",
+    "    df_plot = df.drop(columns=['Year','Day','Month']).groupby(['Country',pd.Grouper(key='Date',freq='d')]).mean().reset_index()\n",
+    "    df_plot[(df_plot['Country']==name) & (df_plot['AvgTemperature']!=-99)].plot(x='Date',y='AvgTemperature',figsize=(30,10))\n",
+    "    plt.title(f'{name} Time Series Plot')\n",
+    "    plt.ylabel('AvgTemperature (c)')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "hydraulic-logging",
+   "metadata": {},
+   "source": [
+    "intro/hypoth => 3\n",
+    "methods/cross-validation => 1\n",
+    "results/conclusion => 2\n",
+    "<!-- not-helping anyone =>  -->\n",
+    "regression => rando\n",
+    "k-fold => TA"
+   ]
   }
  ],
  "metadata": {
