adding outlier removed

--- a/Notebooks/GeoPlot.ipynb
+++ b/Notebooks/GeoPlot.ipynb
@@ -2,34 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "nonprofit-posting",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %%capture\n",
-    "import sys\n",
-    "import os\n",
-    "if not os.path.exists('./city_temperature.csv'):\n",
-    "#   Install Dependencies\n",
-    "    !{sys.executable} -m pip install -r requirements.txt\n",
-    "    !jupyter labextension install jupyterlab-plotly@4.14.3\n",
-    "    !jupyter labextension install @jupyter-widgets/jupyterlab-manager plotlywidget@4.14.3\n",
-    "    !jupyter labextension update --all\n",
-    "    !jupyter lab build\n",
-    "#   Load dataset from kaggle\n",
-    "    !kaggle datasets download -d sudalairajkumar/daily-temperature-of-major-cities\n",
-    "    !unzip daily-temperature-of-major-cities.zip --force\n",
-    "    if os.path.exists('./city_temperature.csv'):\n",
-    "        !rm -rf daily-temperature-of-major-cities.zip"
+    "# # %%capture\n",
+    "# import sys\n",
+    "# import os\n",
+    "# if not os.path.exists('./city_temperature.csv'):\n",
+    "# #   Install Dependencies\n",
+    "#     !{sys.executable} -m pip install -r requirements.txt\n",
+    "#     !jupyter labextension install jupyterlab-plotly@4.14.3\n",
+    "#     !jupyter labextension install @jupyter-widgets/jupyterlab-manager plotlywidget@4.14.3\n",
+    "#     !jupyter labextension update --all\n",
+    "#     !jupyter lab build\n",
+    "# #   Load dataset from kaggle\n",
+    "#     !kaggle datasets download -d sudalairajkumar/daily-temperature-of-major-cities\n",
+    "#     !unzip daily-temperature-of-major-cities.zip --force\n",
+    "#     if os.path.exists('./city_temperature.csv'):\n",
+    "#         !rm -rf daily-temperature-of-major-cities.zip"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "greenhouse-universal",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /Users/c1d/.kaggle/kaggle.json'\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -75,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "novel-export",
    "metadata": {},
    "outputs": [],
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "eastern-institute",
    "metadata": {},
    "outputs": [
@@ -190,7 +197,7 @@
        "4  Africa  Algeria   NaN  Algiers      1    5  1995            47.9"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "reflected-soviet",
    "metadata": {},
    "outputs": [],
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "refined-obligation",
    "metadata": {},
    "outputs": [
@@ -321,7 +328,7 @@
        "4  Africa  Algeria   NaN  Algiers      1    5  1995            47.9 1995-01-05"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "positive-backup",
    "metadata": {},
    "outputs": [],
@@ -342,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "persistent-forestry",
    "metadata": {},
    "outputs": [
@@ -441,7 +448,7 @@
        "4  MULTIPOLYGON (((-122.84000 49.00000, -120.0000...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "wired-threat",
    "metadata": {},
    "outputs": [],
@@ -462,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "mental-robinson",
    "metadata": {},
    "outputs": [
@@ -610,7 +617,7 @@
        "Albania  POLYGON ((21.02004 40.84273, 20.99999 40.58000...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,14 +628,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "registered-settlement",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "31078244ac274639a80a07619fbb7f1c",
+       "model_id": "9ce44a46acd0469f9122c0795e63f26d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -666,14 +673,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "engaged-julian",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e53003777a8e41c7a43dffc9df524b7d",
+       "model_id": "da57f1575aa8435a977410a4dc516f73",
        "version_major": 2,
        "version_minor": 0
       },
@@ -731,7 +738,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
