--- a/Notebooks/Train.ipynb
+++ b/Notebooks/Train.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "young-array",
+   "id": "alternate-miniature",
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +53,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "incorporate-economics",
+   "execution_count": 62,
+   "id": "maritime-margin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,264 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "unable-worthy",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>State</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>AvgTemperature</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>64.2</td>\n",
+       "      <td>1995-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>49.4</td>\n",
+       "      <td>1995-01-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>48.8</td>\n",
+       "      <td>1995-01-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>46.4</td>\n",
+       "      <td>1995-01-04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Africa</td>\n",
+       "      <td>Algeria</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Algiers</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>47.9</td>\n",
+       "      <td>1995-01-05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Region  Country State     City  Month  Day  Year  AvgTemperature       Date\n",
+       "0  Africa  Algeria   NaN  Algiers      1    1  1995            64.2 1995-01-01\n",
+       "1  Africa  Algeria   NaN  Algiers      1    2  1995            49.4 1995-01-02\n",
+       "2  Africa  Algeria   NaN  Algiers      1    3  1995            48.8 1995-01-03\n",
+       "3  Africa  Algeria   NaN  Algiers      1    4  1995            46.4 1995-01-04\n",
+       "4  Africa  Algeria   NaN  Algiers      1    5  1995            47.9 1995-01-05"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "secure-overall",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>AvgTemperature</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2.906327e+06</td>\n",
+       "      <td>2.906327e+06</td>\n",
+       "      <td>2.906327e+06</td>\n",
+       "      <td>2.906327e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>6.469163e+00</td>\n",
+       "      <td>1.571682e+01</td>\n",
+       "      <td>2.006624e+03</td>\n",
+       "      <td>5.600492e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.456489e+00</td>\n",
+       "      <td>8.800534e+00</td>\n",
+       "      <td>2.338226e+01</td>\n",
+       "      <td>3.212359e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>2.000000e+02</td>\n",
+       "      <td>-9.900000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.000000e+00</td>\n",
+       "      <td>8.000000e+00</td>\n",
+       "      <td>2.001000e+03</td>\n",
+       "      <td>4.580000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>6.000000e+00</td>\n",
+       "      <td>1.600000e+01</td>\n",
+       "      <td>2.007000e+03</td>\n",
+       "      <td>6.250000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>9.000000e+00</td>\n",
+       "      <td>2.300000e+01</td>\n",
+       "      <td>2.013000e+03</td>\n",
+       "      <td>7.550000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>1.200000e+01</td>\n",
+       "      <td>3.100000e+01</td>\n",
+       "      <td>2.020000e+03</td>\n",
+       "      <td>1.100000e+02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Month           Day          Year  AvgTemperature\n",
+       "count  2.906327e+06  2.906327e+06  2.906327e+06    2.906327e+06\n",
+       "mean   6.469163e+00  1.571682e+01  2.006624e+03    5.600492e+01\n",
+       "std    3.456489e+00  8.800534e+00  2.338226e+01    3.212359e+01\n",
+       "min    1.000000e+00  0.000000e+00  2.000000e+02   -9.900000e+01\n",
+       "25%    3.000000e+00  8.000000e+00  2.001000e+03    4.580000e+01\n",
+       "50%    6.000000e+00  1.600000e+01  2.007000e+03    6.250000e+01\n",
+       "75%    9.000000e+00  2.300000e+01  2.013000e+03    7.550000e+01\n",
+       "max    1.200000e+01  3.100000e+01  2.020000e+03    1.100000e+02"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "satisfactory-spelling",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique Countries: 125\n",
+      "Number of unique Cities: 321 \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of unique Countries: {len(df.Country.unique())}\")\n",
+    "print(f\"Number of unique Cities: {len(df.City.unique())} \")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "rubber-default",
+   "id": "single-federation",
    "metadata": {},
    "source": [
     "## US: 3 Month Plot & Auto Correlation"
@@ -74,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "exempt-daisy",
+   "id": "continent-shield",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "quiet-overhead",
+   "id": "naked-timber",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "sticky-dream",
+   "id": "coastal-bibliography",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "collective-budapest",
+   "id": "wireless-attraction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "leading-fancy",
+   "id": "impressed-triangle",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "disturbed-register",
+   "id": "helpful-prophet",
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "comic-warrior",
+   "id": "still-british",
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "disturbed-battle",
+   "id": "reserved-arrest",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cross-democrat",
+   "id": "quarterly-envelope",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "angry-northeast",
+   "id": "strong-montreal",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "virtual-laser",
+   "id": "existing-netherlands",
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "talented-flower",
+   "id": "ordered-internship",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "hollywood-nerve",
+   "id": "sensitive-needle",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "planned-morgan",
+   "id": "appointed-behalf",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bibliographic-radical",
+   "id": "wooden-simon",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "tropical-nothing",
+   "id": "wound-statistics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "seven-johnson",
+   "id": "running-prince",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "particular-array",
+   "id": "ranging-spare",
    "metadata": {},
    "outputs": [
     {
@@ -490,9 +746,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "widespread-person",
+   "metadata": {},
+   "source": [
+    "## PACF"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "minimal-killing",
+   "execution_count": 57,
+   "id": "composed-hamilton",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "common-science",
+   "id": "elder-enterprise",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "cross-guide",
+   "id": "naked-costa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,39 +813,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "nervous-cradle",
+   "execution_count": 52,
+   "id": "seventh-basis",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "const     56.112530\n",
-       "ar.L1      0.520465\n",
-       "ar.L2      0.032579\n",
-       "ar.L3     -0.020296\n",
-       "ar.L4     -0.238994\n",
-       "ar.L5     -0.174262\n",
-       "ar.L6     -0.181683\n",
-       "ar.L7     -0.072168\n",
-       "ma.L1      0.095317\n",
-       "sigma2    11.632824\n",
+       "const     0.000000e+00\n",
+       "ar.L1     7.394583e-01\n",
+       "ar.L2     9.735111e-01\n",
+       "ar.L3     7.699281e-01\n",
+       "ar.L4     1.971251e-05\n",
+       "ar.L5     6.421253e-01\n",
+       "ar.L6     4.704338e-01\n",
+       "ar.L7     8.188060e-01\n",
+       "ma.L1     9.516135e-01\n",
+       "sigma2    3.244923e-81\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "arm.params"
+    "arm.pvalues"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "patent-greek",
+   "id": "previous-employment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "specified-german",
+   "id": "indoor-triumph",
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +894,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "catholic-moment",
+   "id": "conventional-medicine",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "iraqi-mercury",
+   "id": "unknown-profit",
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "sharing-canyon",
+   "id": "potential-boxing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "hybrid-leeds",
+   "id": "floppy-corrections",
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "remarkable-priest",
+   "id": "racial-departure",
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "radical-bibliography",
+   "id": "physical-grammar",
    "metadata": {},
    "outputs": [],
    "source": []
