--- a/Notebooks/Train-v2.ipynb
+++ b/Notebooks/Train-v2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "comparative-declaration",
+   "id": "specific-gentleman",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ordered-information",
+   "id": "marked-norwegian",
    "metadata": {},
    "source": [
     "### Import dataset if csv exists"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "impaired-questionnaire",
+   "id": "relevant-character",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "legendary-crest",
+   "id": "local-christopher",
    "metadata": {},
    "source": [
     "### Print dataset head"
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "scheduled-cameroon",
+   "id": "smaller-participation",
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "senior-inspiration",
+   "id": "conservative-offset",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "amateur-textbook",
+   "id": "destroyed-board",
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dated-mission",
+   "id": "valid-peninsula",
    "metadata": {},
    "source": [
     "# US"
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "musical-liberal",
+   "id": "numerous-burst",
    "metadata": {},
    "source": [
     "## Group By Day"
@@ -370,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "usual-reaction",
+   "id": "inside-visibility",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-rally",
+   "id": "smaller-breath",
    "metadata": {},
    "source": [
     "## Remove and Interpolate Default Vals (-99 F)"
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "pretty-pharmacology",
+   "id": "curious-district",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "christian-oxford",
+   "id": "substantial-bookmark",
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "running-tract",
+   "id": "modular-upper",
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cardiovascular-barrel",
+   "id": "cordless-train",
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "assisted-saint",
+   "id": "noted-jordan",
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "floating-chain",
+   "id": "wireless-anxiety",
    "metadata": {},
    "source": [
     "## Fit the model"
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "willing-shannon",
+   "id": "statutory-lightning",
    "metadata": {},
    "source": [
     "### Train model on different parameters"
@@ -539,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "limited-italian",
+   "id": "intermediate-iraqi",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "arbitrary-terrace",
+   "id": "grand-copyright",
    "metadata": {},
    "source": [
     "### Plot MSE vs. Parameter Values (all training data)"
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "possible-tablet",
+   "id": "announced-dutch",
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sufficient-privilege",
+   "id": "prostate-kazakhstan",
    "metadata": {},
    "source": [
     "## K-Fold Validation For Parameters"
@@ -599,7 +599,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "administrative-roulette",
+   "id": "modular-hands",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "faced-warning",
+   "id": "adequate-metabolism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "smoking-wichita",
+   "id": "received-layer",
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
    ],
    "source": [
     "plt.plot([x[0] for x in mse_k],color='orange',label='mse_test')\n",
-    "plt.title(f'K-Fold {n-split} Validation Test')\n",
+    "plt.title(f'United States K-Fold {n-split} Validation Test')\n",
     "plt.xlabel('Lag')\n",
     "plt.ylabel('MSE')\n",
     "plt.legend(loc='best')\n",
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "headed-boards",
+   "id": "nonprofit-auditor",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "australian-essay",
+   "id": "violent-bullet",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "stock-apple",
+   "id": "adaptive-batman",
    "metadata": {},
    "outputs": [
     {
@@ -747,7 +747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "judicial-roulette",
+   "id": "imported-douglas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flexible-vessel",
+   "id": "early-pendant",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +768,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "respiratory-viking",
+   "id": "special-worthy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,14 +778,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polar-cinema",
+   "id": "optimum-filing",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "buried-pleasure",
+   "id": "following-gazette",
    "metadata": {},
    "source": [
     "# Canada"
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dying-emperor",
+   "id": "special-creator",
    "metadata": {},
    "source": [
     "## Group By Day"
@@ -802,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "figured-hospital",
+   "id": "impressed-liquid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "therapeutic-alcohol",
+   "id": "thirty-strike",
    "metadata": {},
    "source": [
     "## Remove and Interpolate Default Vals (-99 F)"
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "decent-decimal",
+   "id": "beneficial-bunny",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "particular-midwest",
+   "id": "architectural-chapter",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "precious-petersburg",
+   "id": "seeing-holocaust",
    "metadata": {},
    "outputs": [
     {
@@ -888,7 +888,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "exterior-brush",
+   "id": "accepted-supplement",
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "enabling-cruise",
+   "id": "auburn-situation",
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "engaging-qatar",
+   "id": "welsh-democracy",
    "metadata": {},
    "source": [
     "## Fit the model"
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "christian-rover",
+   "id": "important-snake",
    "metadata": {},
    "source": [
     "### Train model on different parameters"
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "finite-prime",
+   "id": "focused-bosnia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "wound-antigua",
+   "id": "registered-float",
    "metadata": {},
    "source": [
     "### Plot MSE vs. Parameter Values (all training data)"
@@ -995,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "coupled-looking",
+   "id": "permanent-vision",
    "metadata": {},
    "outputs": [
     {
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "changing-international",
+   "id": "undefined-insight",
    "metadata": {},
    "source": [
     "## K-Fold Validation For Parameters"
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "professional-vatican",
+   "id": "particular-credits",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1056,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "mighty-duration",
+   "id": "suspected-crest",
    "metadata": {},
    "outputs": [
     {
@@ -1084,7 +1084,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "thick-visiting",
+   "id": "charming-purchase",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "sealed-sensitivity",
+   "id": "buried-house",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bottom-reading",
+   "id": "affecting-ukraine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "individual-volunteer",
+   "id": "anticipated-bracket",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "handled-quest",
+   "id": "mexican-saskatchewan",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "individual-possession",
+   "id": "chubby-mouth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sitting-binary",
+   "id": "viral-service",
    "metadata": {},
    "outputs": [],
    "source": [
